[tool.poetry]
name = "rpg-combat-kata"
version = "0.1.0"
description = "TDD Kata to practice unit testing with Python"
authors = ["Juan <juan.bigorra@sennder.com>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
